--- a/style.css
+++ b/style.css
@@ -1,74 +1,30 @@
-body{
-    background-image: linear-gradient(to right,rgb(250, 250, 195),rgb(255, 196, 0));
-    padding: 50px 100px;
+body {
+    background-image: linear-gradient(to right,rgb(231, 231, 38),rgb(246, 227, 167));
 }
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-header{
-    height: 500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url(./jplayimg.png);
+.banner{
+    max-width: 100%;
+    min-width: 100%;
+    height: 400px;
     border-radius: 20px;
 }
-main{
-    padding: 50px 0px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+.col-md-8{
+    padding-top: 23px;
 }
-article{
-    background-color: white;
-    width: 820px;
-    height: 800px;
-    overflow: auto;
-
-
+.responsive {
+    max-width: 150%;
+    height: auto;
 }
-aside{
-    width: 420px;
-    height: 1000px;
-}
-section{
-    background-color: white;
-    margin-bottom: 30px;
-}
-.head{
-    padding: 10px;
-    background-color: rgba(220, 220, 220, 0.623);
-}
-.bo{
-    padding: 20px;
-}
-input[type="text"]{
-    padding: 10px;
-    font-size: 20px;
-}
-button{
-    padding: 10px;
-    font-size: 20px;
-}
-.books{
-    height: 150px;
-    font-size: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-direction: column;
-}
-article{
-    font-size: 32px;
+img {
+    padding: 15px;
 }
 
-.b{
-    padding: 50px;
+.displayBox {
+    width: 100%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif
 }
-.h{
-    padding: 20px;
+.scroll-box {
+    overflow-y: auto;
+    height: 500px;
+    float: left;
+    padding: 1rem;
 }
